--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "rxjs": "~7.8.0",
+    "firebase": "^10.12.0",
+    "firebase-tools": "^13.11.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
